# PuddlesBot

./: .gitignore  .replit  AUDIO_QUALITY_GUIDE.md  DISCLAIMER.md  LICENSE  MUSIC_SETUP.md  README.md  README_REPLIT.txt  REPLIT_SETUP.md  VOCARD_SETUP_GUIDE.md  advanced_recovery.py  database.py  debug_command_logging.py  dice.py  disable.py  fix_database.py  fix_mistral.py  fun.py  help.py  intmsg.py  inviter.py  keep_alive.py  language.py  lvl.py  main - Copy.py  main.py  monitor_commands.py  msg.py  music.py  music_config.py  music_lavalink.py  music_old.py  openchat.py  privacypolicy.md  puddleai.py  pyproject.toml  quality_manager.py  replit.nix  requirements.txt  setup_music.py  (+27 more)
MusicSystem/: function.py  main.py  quality_presets.json  settings.json  voicelink.py
MusicSystem/addons/: __init__.py  ipc_client.py  settings.py
MusicSystem/cogs/: basic.py  listeners.py  settings.py  task.py
MusicSystem/lavalink/: application.yml
MusicSystem/views/: controller.py
MusicSystem/voicelink/: placeholders.py  player.py  pool.py
data/: server_1373713234997153891.db  tasks.db
fortunes/: fortunes-ar.txt  fortunes-de.txt  fortunes-en.txt  fortunes-es.txt  fortunes-fr.txt  fortunes-hi.txt  fortunes-it.txt  fortunes-ja.txt  fortunes-ko.txt  fortunes-zh.txt
langs/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  temp.json  zh.json
templates/: dashboard.html
